# spend-predictor-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/: chart_of_accounts.csv
docs/superpowers/plans/: 2026-06-01-spend-predictor-rag.md  2026-06-02-hierarchical-categorization.md  2026-06-13-synthetic-invoice-generator.md  2026-06-18-template-authoring-from-web.md
docs/superpowers/specs/: 2026-06-01-spend-predictor-rag-design.md  2026-06-02-hierarchical-categorization-design.md  2026-06-13-synthetic-invoice-generator-design.md  2026-06-18-template-authoring-from-web-design.md
scripts/: generate_sample_invoice.py
src/spend_predictor/: agents.py  config.py  flow.py  grounding.py  ledger.py  models.py  parsing.py  pdf_loader.py  web_context.py
src/spend_predictor/rag/: indexer.py  search_tool.py
src/spend_predictor/synthdata/: __init__.py  bundle.py  catalog.py  content.py  erp.py  generate.py  profiles.py  sampler.py  score.py  style.py
src/spend_predictor/synthdata/render/: renderer.py
src/spend_predictor/synthdata/render/templates/: classic.html  corporate.html  eu_vat.html  freelancer.html  minimal.html  modern.html  saas_receipt.html  us_net30.html  utility.html
src/spend_predictor/synthdata/templategen/: __init__.py  __main__.py  author.py  draft.py  search.py  validate.py
tests/: test_agents.py  test_config.py  test_flow.py  test_grounding.py  test_indexer.py  test_ledger.py  test_models.py  test_parsing.py  test_pdf_loader.py  test_search_tool.py  test_smoke.py  test_web_context.py
tests/synthdata/: test_bundle.py  test_catalog.py  test_content.py  test_erp.py  test_generate.py  test_profiles.py  test_renderer.py  test_sampler.py  test_score.py  test_style.py
tests/synthdata/templategen/: test_author.py  test_draft.py  test_search.py  test_validate.py
