[project]
name = "spend-predictor-rag"
version = "0.1.0"
description = "Autonomous invoice processing & spend categorization with CrewAI + RAG"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai>=1.14.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pdfplumber>=0.11.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "reportlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spend_predictor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
